[package]
name = "tun"
version = "0.1.0"
edition = "2024"

[profile.release]
opt-level = 3
lto = true
strip = true

[dependencies]
nullnet-firewall = { git = "https://github.com/GyulyVGC/nullnet-firewall.git" }
tun-rs = { version = "2.7.8", features = ["async_tokio"] }
etherparse = "0.19.0"
clap = { version = "4.5.56", features = ["derive"] }
tokio = { version = "1.49.0", features = ["net", "sync", "rt-multi-thread", "macros", "io-util", "time", "fs"] }
notify = "8.2.0"
serde = { version = "1.0.228", default-features = false, features = ["derive", "alloc"] }
nullnet-liberror = { git = "https://github.com/NullNet-ai/libguard.git", branch = "nullnet-liberror-print" }
nullnet-grpc-lib = { git = "https://github.com/GyulyVGC/nullnet-grpc.git", branch = "perf" }
ipnetwork = { version = "0.21.1", features = ["serde"] }
toml = "0.9.11"
listeners = "0.3.0"
rtnetlink = "0.20.0"
futures = "0.3.31"
network-interface = "2.0.5"

[dev-dependencies]
#serde_test = "1.0.177"
