[package]
name = "nullnet-client"
version = "0.1.0"
edition = "2024"

[profile.release]
opt-level = 3
lto = true
strip = true

[dependencies]
nullnet-firewall = { git = "https://github.com/GyulyVGC/nullnet-firewall.git" }
tun-rs = { version = "2.8.1", features = ["async_tokio"] }
etherparse = "0.19.0"
clap = { version = "4.6.0", features = ["derive"] }
tokio = { version = "1.51.1", features = ["net", "sync", "rt-multi-thread", "macros", "io-util", "time", "fs", "process"] }
notify = "8.2.0"
serde = { version = "1.0.228", default-features = false, features = ["derive", "alloc"] }
nullnet-liberror = { git = "https://github.com/NullNet-ai/libguard.git", branch = "nullnet-liberror-print" }
nullnet-grpc-lib = { git = "https://github.com/GyulyVGC/nullnet-grpc.git" }
ipnetwork = { version = "0.21.1", features = ["serde"] }
toml = "1.1.2"
listeners = "0.5.1"
rtnetlink = "0.20.0"
futures = "0.3.32"
network-interface = "2.0.5"
gag = "1.0.0"
chrono = "0.4.44"
actix-web = "4.11"

[dev-dependencies]
#serde_test = "1.0.177"
