[workspace]
resolver = "2"
members = ["members/*", "xtask"]
exclude = ["ebpf"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-only"
authors = ["Giuliano Bellini <gyulyvgc99@gmail.com>"]

[workspace.dependencies]
nullnet-grpc-lib = { path = "members/nullnet-grpc-lib" }
nullnet-liberror = { git = "https://github.com/NullNet-ai/libguard.git", branch = "nullnet-liberror-print" }
tokio = "1.52.3"
serde = "1.0.228"
serde_json = "1.0"
toml = "1.1.2"
chrono = "0.4.44"
gag = "1.0.0"
ipnetwork = "0.21.1"
notify = "8.2.0"
async-trait = "0.1.89"
tonic = "0.14.5"
prost = "0.14.3"
tonic-prost = "0.14.5"

[profile.release]
opt-level = 3
lto = true
strip = true
