[package]
name = "nullnet-ebpf"
version = "0.1.0"
description = "nullnet eBPF"
license = "AGPL-3.0-only"
edition = "2024"
repository = "https://github.com/NullNet-ai/nullnet-client"

[dependencies]
aya-ebpf = "0.1.1"
network-types = { git = "https://github.com/vadorovsky/network-types", rev = "b78424c" }
#nullnet-common = { path = "../nullnet-common" }
#aya-log-ebpf = { git = "https://github.com/aya-rs/aya", branch = "main" }

[[bin]]
name = "nullnet"
path = "src/main.rs"

[profile.dev]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
panic = "abort"
incremental = false
codegen-units = 1
rpath = false

[profile.release]
lto = "fat"
panic = "abort"
codegen-units = 1
strip = false

[workspace]
members = []
